@@ -2,11 +2,12 @@ CHANGELOG VERSIONX
 
 VersionX 1.0 Alpha4 (to be released)
 ===================================
+- #30: Improve error display when no changes were made (New lexicon string added to English file)
 - #19: Fix plugin code to save full timestamp as UNIX timestamp, and format in getlist process.
 - #34: Fix lexicon reference for "no" in getlist. Improve content_disposition display.
 - Added copyright notice in Russian translation.
 - #37: Update link to modx.com instead of modxcms.com
-- #21: Lexicon-ify error messages of processor output. (New lexicon strings added to english file)
+- #21: Lexicon-ify error messages of processor output. (New lexicon strings added to English file)
 - Re #18: Add check for php >5.3.0 when comparing resource content (prevents E_DEPRECEATED error for split() in xpdorevisioncontrol)
 - #21: Encode errors returned by processors to json to prevent ajax loader getting stuck
 - Display template ID in view details when template could not be found
